# magicbandreader

./: README.md  cli.py  pyproject.toml  scanner-to-kafka.py
